--- a/css/l3-basicSelectors/index.html
+++ b/css/l3-basicSelectors/index.html
@@ -28,7 +28,7 @@
         <a href="#">Link5</a>
     </div>
     <br>
-    <a href="https://www.instagram.com">Link6</a>
+    <a href="https://learn.javascript.ru/css-selectors">Link6</a>
 
     <a href="https://www.telegram.com/man1">Link7</a>
 
