--- a/project/index.html
+++ b/project/index.html
@@ -2,11 +2,40 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,400;0,500;0,600;0,700;1,400&family=Roboto&display=swap"
+          rel="stylesheet">
+    <link rel="stylesheet" href="css/bootstrap-reboot.css">
     <link rel="stylesheet" href="css/style.css">
     <script src="js/main.js"></script>
     <title>Project</title>
 </head>
 <body>
-
+<section class="promo">
+    <div class="container">
+        <header class="header">
+            <a href="#" class="logo">
+                <div class="logo_wrap">
+                    <img src="icons/logo/logo.svg" alt="logo" class="logo_img">
+                    <div class="logo_text">
+                        Dart<br>
+                        <span>service manager</span>
+                    </div>
+                </div>
+            </a>
+            <nav class="nav">
+                <ul class="nav_list">
+                    <li class="nav_item"><a href="#">Home</a></li>
+                    <li class="nav_item"><a href="#">Service</a></li>
+                    <li class="nav_item"><a href="#">Extensions</a></li>
+                    <li class="nav_item"><a href="#">Prising</a></li>
+                    <li class="nav_item"><a href="#">Help</a></li>
+                </ul>
+            </nav>
+            <div class="promo_sign">
+                <button>sign up</button>
+            </div>
+        </header>
+    </div>
+</section>
 </body>
 </html>
