--- a/project/index.html
+++ b/project/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,400;0,500;0,600;0,700;1,400&family=Roboto&display=swap"
           rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
     <link rel="stylesheet" href="css/bootstrap-reboot.css">
     <link rel="stylesheet" href="css/style.css">
     <script src="js/main.js"></script>
@@ -35,6 +36,32 @@
                 <button>sign up</button>
             </div>
         </header>
+        <div class="promo_content">
+            <div class="promo_text">
+                <h1 class="promo_title">
+                    Lorem ipsum<br>
+                    dolor sit amet
+                </h1>
+                <div class="promo_descr">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt labore et
+                    dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamc
+                    laboris nisi ut aliquip ex ea commodo consequat.
+                </div>
+                <div class="promo_btns">
+                    <button class="promo_btn promo_btn_black">Buy now</button>
+                    <button class="promo_btn promo_btn_white">Try for free</button>
+                </div>
+            </div>
+            <div class="promo_video">
+                <video width="600" height="320" src="video/testVideo.mp4" poster="video/poster.png"></video>
+                <div class="promo_play">
+                    <div>
+                        <i class="fas fa-play"></i>
+                    </div>
+                    Watch the video
+                </div>
+            </div>
+        </div>
     </div>
 </section>
 </body>
