--- a/project/index.html
+++ b/project/index.html
@@ -64,5 +64,55 @@
         </div>
     </div>
 </section>
+
+<section class="useful">
+    <div class="container">
+        <h2 class="title">Ease & Useful</h2>
+        <div class="subtitle">Project Management Tool</div>
+        <div class="descr">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+            labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+        </div>
+        <div class="useful_content">
+            <div class="useful_item">
+                <div class="useful_icon">
+                    <i class="far fa-calendar-alt"></i>
+                </div>
+                <div class="useful_text">
+                    <h3 class="useful_title">Title Goes Here</h3>
+                    <div class="useful_descr">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+                        labore et dolore magna aliqua.
+                    </div>
+                </div>
+            </div>
+            <div class="useful_item">
+                <div class="useful_icon">
+                    <i class="fas fa-user-alt"></i>
+                </div>
+                <div class="useful_text">
+                    <h3 class="useful_title">Title Goes Here</h3>
+                    <div class="useful_descr">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+                        labore et dolore magna aliqua.
+                    </div>
+                </div>
+            </div>
+            <div class="useful_item">
+                <div class="useful_icon">
+                    <i class="fas fa-fire"></i>
+                </div>
+                <div class="useful_text">
+                    <h3 class="useful_title">Title Goes Here</h3>
+                    <div class="useful_descr">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+                        labore et dolore magna aliqua.
+                    </div>
+                </div>
+            </div>
+        </div>
+        <button class="useful_btn">Get started</button>
+    </div>
+</section>
 </body>
 </html>
