--- a/project/index.html
+++ b/project/index.html
@@ -114,5 +114,52 @@
         <button class="useful_btn">Get started</button>
     </div>
 </section>
+
+<section class="progress">
+    <div class="progress_item progress_item_business">
+        <div class="progress_wrap">
+            <div class="progress_icon">
+                <i class="fas fa-briefcase"></i>
+            </div>
+            <div class="progress_text">
+                12000+<br>
+                Business
+            </div>
+        </div>
+    </div>
+    <div class="progress_item progress_item_downloads">
+        <div class="progress_wrap">
+            <div class="progress_icon">
+                <i class="fas fa-download"></i>
+            </div>
+            <div class="progress_text">
+                60000+<br>
+                Downloads
+            </div>
+        </div>
+    </div>
+    <div class="progress_item progress_item_installs">
+        <div class="progress_wrap">
+            <div class="progress_icon">
+                <i class="fas fa-user"></i>
+            </div>
+            <div class="progress_text">
+                30000+<br>
+                Free Installs
+            </div>
+        </div>
+    </div>
+    <div class="progress_item progress_item_users">
+        <div class="progress_wrap">
+            <div class="progress_icon">
+                <i class="fas fa-download"></i>
+            </div>
+            <div class="progress_text">
+                40000+<br>
+                Pro Users
+            </div>
+        </div>
+    </div>
+</section>
 </body>
 </html>
