--- a/project/index.html
+++ b/project/index.html
@@ -161,5 +161,113 @@
         </div>
     </div>
 </section>
+
+<section class="service">
+    <h2 class="title">Services</h2>
+    <div class="descr">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore
+        magna
+    </div>
+    <div class="service_content">
+        <div class="tabs">
+            <div class="tabs_item">
+                <div class="tabs_head">
+                    <div class="tabs_wrap">
+                        <div class="tabs_icon"><i class="fas fa-chart-line"></i></div>
+                        <div class="tabs_title">Statistics</div>
+                    </div>
+                    <div class="tabs_down"><i class="fas fa-chevron-down"></i></div>
+                </div>
+                <div class="tabs_content">
+                    <div class="tabs_img"></div>
+                    <div class="tabs_text">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+                        labore et dolore magna aliqua. Ut enim ad minim veniam,
+                        <br><br>
+                        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
+                        irure dolor in reprehenderit in
+                    </div>
+                </div>
+            </div>
+            <div class="tabs_item">
+                <div class="tabs_head">
+                    <div class="tabs_wrap">
+                        <div class="tabs_icon"><i class="fas fa-envelope"></i></div>
+                        <div class="tabs_title">inbox</div>
+                    </div>
+                    <div class="tabs_down"><i class="fas fa-chevron-down"></i></div>
+                </div>
+                <div class="tabs_content">
+                    <div class="tabs_img"></div>
+                    <div class="tabs_text">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+                        labore et dolore magna aliqua. Ut enim ad minim veniam,
+                        <br><br>
+                        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
+                        irure dolor in reprehenderit in
+                    </div>
+                </div>
+            </div>
+            <div class="tabs_item">
+                <div class="tabs_head">
+                    <div class="tabs_wrap">
+                        <div class="tabs_icon"><i class="fas fa-user-friends"></i></div>
+                        <div class="tabs_title">team</div>
+                    </div>
+                    <div class="tabs_down"><i class="fas fa-chevron-down"></i></div>
+                </div>
+                <div class="tabs_content">
+                    <div class="tabs_img"></div>
+                    <div class="tabs_text">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+                        labore et dolore magna aliqua. Ut enim ad minim veniam,
+                        <br><br>
+                        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
+                        irure dolor in reprehenderit in
+                    </div>
+                </div>
+            </div>
+            <div class="tabs_item">
+                <div class="tabs_head">
+                    <div class="tabs_wrap">
+                        <div class="tabs_icon"><i class="fas fa-cog"></i></div>
+                        <div class="tabs_title">settings</div>
+                    </div>
+                    <div class="tabs_down"><i class="fas fa-chevron-down"></i>
+                    </div>
+                </div>
+                <div class="tabs_content">
+                    <div class="tabs_img"></div>
+                    <div class="tabs_text">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+                        labore et dolore magna aliqua. Ut enim ad minim veniam,
+                        <br><br>
+                        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
+                        irure dolor in reprehenderit in
+                    </div>
+                </div>
+            </div>
+            <div class="tabs_item">
+                <div class="tabs_head">
+                    <div class="tabs_wrap">
+                        <div class="tabs_icon"><i class="fas fa-rss"></i></div>
+                        <div class="tabs_title">feed</div>
+                    </div>
+                    <div class="tabs_down"><i class="fas fa-chevron-down"></i></div>
+                </div>
+                <div class="tabs_content">
+                    <div class="tabs_img"></div>
+                    <div class="tabs_text">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+                        labore et dolore magna aliqua. Ut enim ad minim veniam,
+                        <br><br>
+                        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
+                        irure dolor in reprehenderit in
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
 </body>
 </html>
