--- a/project/index.html
+++ b/project/index.html
@@ -48,8 +48,8 @@
                     laboris nisi ut aliquip ex ea commodo consequat.
                 </div>
                 <div class="promo_btns">
-                    <button class="promo_btn promo_btn_black">Buy now</button>
-                    <button class="promo_btn promo_btn_white">Try for free</button>
+                    <button class="btn btn_black">Buy now</button>
+                    <button class="btn btn_white">Try for free</button>
                 </div>
             </div>
             <div class="promo_video">
@@ -67,44 +67,38 @@
 
 <section class="useful">
     <div class="container">
-        <h2 class="title">Ease & Useful</h2>
-        <div class="subtitle">Project Management Tool</div>
-        <div class="descr">
+        <h2 class="title useful_title">Ease & Useful</h2>
+        <div class="subtitle useful_subtitle">Project Management Tool</div>
+        <div class="descr useful_descr">
             Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
             labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
         </div>
         <div class="useful_content">
             <div class="useful_item">
-                <div class="useful_icon">
-                    <i class="far fa-calendar-alt"></i>
-                </div>
+                <div class="useful_icon"><i class="far fa-calendar-alt"></i></div>
                 <div class="useful_text">
-                    <h3 class="useful_title">Title Goes Here</h3>
-                    <div class="useful_descr">
+                    <h3 class="useful_item_title">Title Goes Here</h3>
+                    <div class="useful_item_descr">
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
                         labore et dolore magna aliqua.
                     </div>
                 </div>
             </div>
             <div class="useful_item">
-                <div class="useful_icon">
-                    <i class="fas fa-user-alt"></i>
-                </div>
+                <div class="useful_icon"><i class="fas fa-user-alt"></i></div>
                 <div class="useful_text">
-                    <h3 class="useful_title">Title Goes Here</h3>
-                    <div class="useful_descr">
+                    <h3 class="useful_item_title">Title Goes Here</h3>
+                    <div class="useful_item_descr">
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
                         labore et dolore magna aliqua.
                     </div>
                 </div>
             </div>
             <div class="useful_item">
-                <div class="useful_icon">
-                    <i class="fas fa-fire"></i>
-                </div>
+                <div class="useful_icon"><i class="fas fa-fire"></i></div>
                 <div class="useful_text">
-                    <h3 class="useful_title">Title Goes Here</h3>
-                    <div class="useful_descr">
+                    <h3 class="useful_item_title">Title Goes Here</h3>
+                    <div class="useful_item_descr">
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
                         labore et dolore magna aliqua.
                     </div>
@@ -163,106 +157,144 @@
 </section>
 
 <section class="service">
-    <h2 class="title">Services</h2>
-    <div class="descr">
+    <h2 class="title service_title">Services</h2>
+    <div class="descr service_descr">
         Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore
         magna
     </div>
-    <div class="service_content">
-        <div class="tabs">
-            <div class="tabs_item">
-                <div class="tabs_head">
-                    <div class="tabs_wrap">
-                        <div class="tabs_icon"><i class="fas fa-chart-line"></i></div>
-                        <div class="tabs_title">Statistics</div>
-                    </div>
-                    <div class="tabs_down"><i class="fas fa-chevron-down"></i></div>
+    <div class="tabs">
+        <div class="tabs_item">
+            <div class="tabs_head">
+                <div class="tabs_wrap">
+                    <div class="tabs_icon"><i class="fas fa-chart-line"></i></div>
+                    <div class="tabs_title">Statistics</div>
                 </div>
-                <div class="tabs_content">
-                    <div class="tabs_img"></div>
-                    <div class="tabs_text">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
-                        labore et dolore magna aliqua. Ut enim ad minim veniam,
-                        <br><br>
-                        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
-                        irure dolor in reprehenderit in
+                <div class="tabs_down"><i class="fas fa-chevron-down"></i></div>
+            </div>
+            <div class="tabs_content">
+                <div class="tabs_img"></div>
+                <div class="tabs_text">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+                    labore et dolore magna aliqua. Ut enim ad minim veniam,
+                    <br><br>
+                    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
+                    irure dolor in reprehenderit in
+                </div>
+            </div>
+        </div>
+        <div class="tabs_item">
+            <div class="tabs_head">
+                <div class="tabs_wrap">
+                    <div class="tabs_icon"><i class="fas fa-envelope"></i></div>
+                    <div class="tabs_title">inbox</div>
+                </div>
+                <div class="tabs_down"><i class="fas fa-chevron-down"></i></div>
+            </div>
+            <div class="tabs_content">
+                <div class="tabs_img"></div>
+                <div class="tabs_text">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+                    labore et dolore magna aliqua. Ut enim ad minim veniam,
+                    <br><br>
+                    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
+                    irure dolor in reprehenderit in
+                </div>
+            </div>
+        </div>
+        <div class="tabs_item">
+            <div class="tabs_head">
+                <div class="tabs_wrap">
+                    <div class="tabs_icon"><i class="fas fa-user-friends"></i></div>
+                    <div class="tabs_title">team</div>
+                </div>
+                <div class="tabs_down"><i class="fas fa-chevron-down"></i></div>
+            </div>
+            <div class="tabs_content">
+                <div class="tabs_img"></div>
+                <div class="tabs_text">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+                    labore et dolore magna aliqua. Ut enim ad minim veniam,
+                    <br><br>
+                    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
+                    irure dolor in reprehenderit in
+                </div>
+            </div>
+        </div>
+        <div class="tabs_item">
+            <div class="tabs_head">
+                <div class="tabs_wrap">
+                    <div class="tabs_icon"><i class="fas fa-cog"></i></div>
+                    <div class="tabs_title">settings</div>
+                </div>
+                <div class="tabs_down"><i class="fas fa-chevron-down"></i>
+                </div>
+            </div>
+            <div class="tabs_content">
+                <div class="tabs_img"></div>
+                <div class="tabs_text">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+                    labore et dolore magna aliqua. Ut enim ad minim veniam,
+                    <br><br>
+                    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
+                    irure dolor in reprehenderit in
+                </div>
+            </div>
+        </div>
+        <div class="tabs_item">
+            <div class="tabs_head">
+                <div class="tabs_wrap">
+                    <div class="tabs_icon"><i class="fas fa-rss"></i></div>
+                    <div class="tabs_title">feed</div>
+                </div>
+                <div class="tabs_down"><i class="fas fa-chevron-down"></i></div>
+            </div>
+            <div class="tabs_content">
+                <div class="tabs_img"></div>
+                <div class="tabs_text">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+                    labore et dolore magna aliqua. Ut enim ad minim veniam,
+                    <br><br>
+                    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
+                    irure dolor in reprehenderit in
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section class="reviews">
+    <div class="container reviews_wrap">
+        <div class="reviews_about">
+            <h2 class="reviews_title">
+                What our customers<br>
+                have to say about us.
+            </h2>
+            <div class="reviews_descr">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+                labore et dolore magna
+            </div>
+            <button class="btn btn_black">Get started</button>
+        </div>
+        <div class="reviews_items">
+            <div class="review">
+                <img class="review_icon" src="img/reviews/review_John_Doe.jpg" alt="John Doe">
+                <div class="review_body">
+                    <div class="review_name">John Doe</div>
+                    <div class="review_text">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
+                        ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                        laboris nisi ut aliquip ex ea
                     </div>
                 </div>
             </div>
-            <div class="tabs_item">
-                <div class="tabs_head">
-                    <div class="tabs_wrap">
-                        <div class="tabs_icon"><i class="fas fa-envelope"></i></div>
-                        <div class="tabs_title">inbox</div>
-                    </div>
-                    <div class="tabs_down"><i class="fas fa-chevron-down"></i></div>
-                </div>
-                <div class="tabs_content">
-                    <div class="tabs_img"></div>
-                    <div class="tabs_text">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
-                        labore et dolore magna aliqua. Ut enim ad minim veniam,
-                        <br><br>
-                        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
-                        irure dolor in reprehenderit in
-                    </div>
-                </div>
-            </div>
-            <div class="tabs_item">
-                <div class="tabs_head">
-                    <div class="tabs_wrap">
-                        <div class="tabs_icon"><i class="fas fa-user-friends"></i></div>
-                        <div class="tabs_title">team</div>
-                    </div>
-                    <div class="tabs_down"><i class="fas fa-chevron-down"></i></div>
-                </div>
-                <div class="tabs_content">
-                    <div class="tabs_img"></div>
-                    <div class="tabs_text">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
-                        labore et dolore magna aliqua. Ut enim ad minim veniam,
-                        <br><br>
-                        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
-                        irure dolor in reprehenderit in
-                    </div>
-                </div>
-            </div>
-            <div class="tabs_item">
-                <div class="tabs_head">
-                    <div class="tabs_wrap">
-                        <div class="tabs_icon"><i class="fas fa-cog"></i></div>
-                        <div class="tabs_title">settings</div>
-                    </div>
-                    <div class="tabs_down"><i class="fas fa-chevron-down"></i>
-                    </div>
-                </div>
-                <div class="tabs_content">
-                    <div class="tabs_img"></div>
-                    <div class="tabs_text">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
-                        labore et dolore magna aliqua. Ut enim ad minim veniam,
-                        <br><br>
-                        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
-                        irure dolor in reprehenderit in
-                    </div>
-                </div>
-            </div>
-            <div class="tabs_item">
-                <div class="tabs_head">
-                    <div class="tabs_wrap">
-                        <div class="tabs_icon"><i class="fas fa-rss"></i></div>
-                        <div class="tabs_title">feed</div>
-                    </div>
-                    <div class="tabs_down"><i class="fas fa-chevron-down"></i></div>
-                </div>
-                <div class="tabs_content">
-                    <div class="tabs_img"></div>
-                    <div class="tabs_text">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
-                        labore et dolore magna aliqua. Ut enim ad minim veniam,
-                        <br><br>
-                        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
-                        irure dolor in reprehenderit in
+            <div class="review">
+                <img class="review_icon" src="img/reviews/review_Khalessi.jpg" alt="Khalessi">
+                <div class="review_body">
+                    <div class="review_name">Khalessi</div>
+                    <div class="review_text">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
+                        ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                        laboris nisi ut aliquip ex ea
                     </div>
                 </div>
             </div>
