html lesson 6-7 some fixes

--- a/html/l6-7-forms/index.html
+++ b/html/l6-7-forms/index.html
@@ -29,7 +29,8 @@
         <br>
         <textarea cols="10" rows="10"></textarea>
         <br>
-        <input type="submit"></fieldset>
+        <input type="submit">
+    </fieldset>
 </form>
 </body>
 </html>
