project-lesson9 + some fixes

--- a/project/index.html
+++ b/project/index.html
@@ -52,8 +52,8 @@
                     laboris nisi ut aliquip ex ea commodo consequat.
                 </div>
                 <div class="promo_btns">
-                    <button class="btn btn_black">Buy now</button>
-                    <button class="btn btn_white">Try for free</button>
+                    <button class="btn btn_black promo_btn">Buy now</button>
+                    <button class="btn btn_white promo_btn">Try for free</button>
                 </div>
             </div>
             <div class="promo_video">
@@ -109,7 +109,7 @@
                 </div>
             </div>
         </div>
-        <button class="useful_btn">Get started</button>
+        <button class="btn btn_green useful_btn">Get started</button>
     </div>
 </section>
 
@@ -387,6 +387,34 @@
                 </div>
             </div>
         </div>
+    </div>
+</section>
+
+<section class="contact">
+    <h2 class="title">Contact Us</h2>
+    <div class="descr contact_descr">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
+        dolore magna
+    </div>
+    <div class="contact_content">
+        <form action="#" class="form">
+            <div class="form_wrap">
+                <input type="text" name="firstName" class="form_input" placeholder="First name" required>
+                <input type="text" name="lastName" class="form_input" placeholder="Last name" required>
+            </div>
+            <div class="form_wrap">
+                <input type="email" name="email" class="form_input" placeholder="Email" required>
+                <input type="tel" name="tel" class="form_input" placeholder="Phone">
+            </div>
+            <textarea name="message" class="form_message" placeholder="Message" required></textarea>
+            <div class="form_wrap">
+                <label for="subs">
+                    <input type="checkbox" id="subs" name="subscribe" class="form_subs">
+                    subscribe to the newsletter
+                </label>
+                <input type="submit" class="btn btn_green form_btn" value="send">
+            </div>
+        </form>
     </div>
 </section>
 </body>
